# University-Babes-Bolyai-Informatics

./: .gitignore  LICENSE  README.md
1st Semester/Workshops/Computer systems architecture (Assembly)/Exam Exercise/: input.txt  test.asm  test.lst
1st Semester/Workshops/Computer systems architecture (Assembly)/Lab 2 exercises/: 1.3  1.4  1.5  1.8  1.9  2.28  2.4  3.16  3.17  3.6
1st Semester/Workshops/Computer systems architecture (Assembly)/Lab 3 exercises/: Adunari_scaderi_15.asm  Adunari_scaderi_30.asm  Adunari_scaderi_5.asm
1st Semester/Workshops/Computer systems architecture (Assembly)/Lab 4 exercises/: 14.asm
2nd Semester/Workshops/Dynamic Systems/: examen_laborator.mw  lab4.mw  lab5.mw
2st Semester/Workshops/Data Structures and Algorithms/Lab 1 TAD MultiDictionar Ordonat/: CMakeLists.txt
2st Semester/Workshops/Data Structures and Algorithms/Lab 1/TAD Colectie (cu relatie)/: CMakeLists.txt
2st Semester/Workshops/Data Structures and Algorithms/Lab 1/TAD Colectie (cu relatie)/Proiect C++/Colectie (cu rel)/: Colectie.h
2st Semester/Workshops/Dynamic Systems/: lab2.mw  lab3.mw
2st Semester/Workshops/Object Oriented Programming/Lab 8/: CMakeLists.txt
2st Semester/Workshops/Object Oriented Programming/Lab 8/src/: validator.cpp
2st Semester/Workshops/Object Oriented Programming/Lab 9/: CMakeLists.txt  main.cpp  test.html
2st Semester/Workshops/Object Oriented Programming/Lab 9/headers/: disciplineGUI.h
2st Semester/Workshops/Object Oriented Programming/Lab 9/src/: disciplineGUI.cpp
2st Semester/Workshops/Object Oriented Programming/Lab 9/tests/: tests_file.txt
2st Semester/Workshops/Object Oriented Programming/Laboratory 6-7/: CMakeLists.txt  main.cpp
2st Semester/Workshops/Object Oriented Programming/Laboratory 6-7/headers/: domain.h  service.h  ui.h
2st Semester/Workshops/Object Oriented Programming/Laboratory 6-7/src/: domain.cpp  service.cpp  ui.cpp
2st Semester/Workshops/Object Oriented Programming/Laboratory 6-7/tests/: tests_service.cpp
First Year/Second Semester/Data Structures and Algorithms (C & C++)/Workshops/Lab 1/TAD Multime (cu relatie)/: CMakeLists.txt
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Exam/Apartamente/: CMakeLists.txt  main.cpp
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Exam/Apartamente/headers/: validator.h
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Exam/Apartamente/src/: domain.cpp  service.cpp  validator.cpp
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Exam/Apartamente/tests/: tests_file.txt  tests_repository.h  tests_service.h  tests_validator.cpp
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Exam/Produse/: CMakeLists.txt
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Exam/Produse/headers/: observer.h  service.h
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Exam/Produse/src/: gui.cpp
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Exam/Tractoare/: CMakeLists.txt  input.txt  main.cpp
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Exam/Tractoare/headers/: domain.h  repository.h
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Exam/Tractoare/src/: gui.cpp
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Exam/Tractoare/tests/: tests_repository.cpp  tests_service.cpp
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Lab 13-14/: CMakeLists.txt
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Lab 13-14/headers/: domain.h  modelView.h  repository.h  undo.h  validator.h
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Lab 13-14/headers/GUI/: contractCrudGUI.h  contractGUI.h  contractReadOnlyGUI.h  filterGUI.h
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Lab 13-14/src/GUI/: GUI.cpp  contractGUI.cpp  sortGUI.cpp
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Lab 13-14/tests/: tests_repository.cpp  tests_service.cpp
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Laboratory 2 Dynamic/: CMakeLists.txt
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/Laboratory 2 Dynamic/Domain/: domain.c  domain.h
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/OOP_Exam/Melodii/: CMakeLists.txt
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/OOP_Exam/Melodii/headers/: domain.h  gui.h  repository.h  service.h
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/OOP_Exam/Melodii/src/: gui.cpp  repository.cpp
First Year/Second Semester/Object Oriented Programming (C & C++)/Workshops/OOP_Exam/Melodii/tests/: tests_repository.cpp  tests_service.cpp
First Year/Second Semester/Object Oriented Programming (C:C++)/Workshops/OOP_Exam/Biblioteca/: CMakeLists.txt  file.txt
First Year/Second Semester/Object Oriented Programming (C:C++)/Workshops/OOP_Exam/Biblioteca/headers/: repository.h
First Year/Second Semester/Object Oriented Programming (C:C++)/Workshops/OOP_Exam/Biblioteca/src/: domain.cpp
First Year/Second Semester/Object Oriented Programming (C:C++)/Workshops/OOP_Exam/Biblioteca/tests/: tests_domain.h
First Year/Second Semester/Object Oriented Programming (C:C++)/Workshops/OOP_Exam/Rochii/: CMakeLists.txt
First Year/Second Semester/Object Oriented Programming (C:C++)/Workshops/OOP_Exam/Rochii/headers/: domain.h
First Year/Second Semester/Object Oriented Programming (C:C++)/Workshops/OOP_Exam/Rochii/tests/: tests_repository.cpp
First Year/Second Semester/Object Oriented Programming (C:C++)/Workshops/OOP_Labs/Laboratory 2 Dynamic + Undo/: CMakeLists.txt
First Year/Second Semester/Object Oriented Programming (C:C++)/Workshops/OOP_Labs/Laboratory 2 Dynamic + Undo/repo/: repo.h
(+704 files in other folders)
