cmake_minimum_required(VERSION 3.30)
project(Colectie__cu_relatie_)

set(CMAKE_CXX_STANDARD 20)

add_executable(Colectie__cu_relatie_ main.cpp
        "Proiect C++/Colectie (cu rel)/Colectie.cpp"
        "Proiect C++/Colectie (cu rel)/IteratorColectie.cpp"
        "Teste/TestExtins.cpp"
        "Teste/TestScurt.cpp")
