cmake_minimum_required(VERSION 3.30)
project(Multime__cu_relatie_)

set(CMAKE_CXX_STANDARD 20)

add_executable(Multime__cu_relatie_
        main.cpp
        "Proiect C++/Multime (cu rel)/Multime.cpp"
        "Proiect C++/Multime (cu rel)/IteratorMultime.cpp"
        Teste/TestScurt.cpp
        Teste/TestExtins.cpp)